package com.dignamente.saude.br.enums;

public enum StatusConsulta {
    AGENDADA,
    CANCELADA,
    REALIZADA
}
