package com.dignamente.saude.br.enums;

public enum StatusDisponibilidade {
    DISPONIVEL,
    RESERVADA,
    INDISPONIVEL
}